# tacentview

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TacitTexView.sln  TacitTexView.vcxproj  TacitTexView.vcxproj.filters  resource.h
.github/workflows/: main.yml
Assets/: Licence_APNGAsm.txt  Licence_APNGDis.txt  Licence_DearImGui_MIT.txt  Licence_LibJpegTurbo.txt  Licence_LibKTX.txt  Licence_OpenEXR.txt  Licence_PowerVRNativeSDK.txt  Licence_RobotoFont_Apache2.txt  Licence_SHA256.txt  Licence_TacentView_ISC.txt  Licence_Tacent_ISC.txt  Licence_TinyEXIF.txt  Licence_WebP.txt  Licence_gifenc.txt
Contrib/ImFileDialog/: ImFileDialog.cpp
Contrib/clip/: clip.h  clip_x11.cpp
Contrib/glfw/: Readme_BuildGLFW.txt  glfw3.lib
Contrib/imgui/: imconfig.h  imgui-1.67.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
Data/: Licence_APNGAsm.txt  Licence_APNGDis.txt  Licence_ASTCEncoder.txt  Licence_BMP.txt  Licence_Clip.txt  Licence_DearImGui_MIT.txt  Licence_GifLoad.txt  Licence_GifSave.txt  Licence_IcoLoad.txt  Licence_LibJPEG.txt  Licence_LibKTX.txt  Licence_LibPNG.txt  Licence_LibSPNG.txt  Licence_PKM.txt  Licence_QOI.txt  Licence_Radiance.txt  Licence_Readme.txt  Licence_SHA256.txt  Licence_TacentView_ISC.txt  Licence_Tacent_ISC.txt  Licence_TinyXML2.txt  Licence_Utf8Utf16.txt  Licence_bcdec.txt  Licence_etcdec.txt  Licence_gifenc.txt  Readme.txt
Icons/: TacentView.afphoto
Icons/Buttons/: AnchorBL.afphoto  AnchorBM.afphoto  AnchorCenter.afphoto  AnchorCorner.afphoto  AnchorML.afphoto  AnchorMM.afphoto  AnchorSide.afphoto  ChannelFilter.afphoto  ContentView.afphoto  Crop.afphoto  Cubemap.afphoto  DefaultThumbnail.afphoto  File.afphoto  FlipH.afphoto  FlipV.afphoto  Folder.afphoto  Fullscreen.afphoto  Help.afphoto  InfoOverlay.afphoto  Levels.afphoto  MetaData.afphoto  NextSide_PrevSide.afphoto  Next_Prev.afphoto  Play.afphoto  PlayLoop.afphoto  PlayOnce.afphoto  PlayRev.afphoto  Prev.afphoto  PropEdit.afphoto  Recycle.afphoto  Refresh.afphoto  RotACW.afphoto  RotCW.afphoto  RotTheta.afphoto  Settings.afphoto  ShowHidden.afphoto  SkipBegin.afphoto  SkipEnd.afphoto  Stop.afphoto  Tile.afphoto  (+2 more)
Linux/: Makefile  TacitTexView.mk  TacitTexView.project  TacitTexView.workspace  create_deb.sh  create_deb.sh.in  create_nix.sh.in  create_tgz.sh.in  createdeb.sh  fixup_makefiles_for_github_runner
Linux/snapcraft/: .gitignore  Readme.txt
Src/: ColourDialogs.cpp  ColourDialogs.h  Command.cpp  Command.h  CommandHelp.cpp  CommandHelp.h  CommandOps.cpp  CommandOps.h  Config.cpp  Config.h  ContactSheet.cpp  ContactSheet.h  ContentView.cpp  ContentView.h  Crop.cpp  Crop.h  Details.cpp  Details.h  Dialogs.cpp  Dialogs.h  FileDialog.cpp  FileDialog.h  GuiUtil.cpp  GuiUtil.h  ImGuiLogWindow.cpp  ImGuiLogWindow.h  Image.cpp  Image.h  ImportRaw.cpp  ImportRaw.h  Input.cpp  Input.h  InputBindings.cpp  InputBindings.h  MultiFrame.cpp  MultiFrame.h  OpenSaveDialogs.cpp  OpenSaveDialogs.h  Preferences.cpp  Preferences.h  (+30 more)
Tacent/: .gitattributes  .gitignore  Docs.txt  LICENSE  README.md
Tacent/Contrib/: .gitignore
Tacent/Docs/: BuildConfigurationTable.txt  GenTacentHtml.bat  Readme.txt  WoboqGen.cpp  gen_tacent_html
Tacent/Modules/: .gitignore  ModuleDependencies.txt  WoboqTacent.cfg
Tacent/UnitTests/: .gitignore
TestImages/: Dock318x178.tga  Dock319x179.tga  Dock320x180.tga  Readme.txt  TacentTestPattern24.tga  TacentTestPattern32.tga
TestImages/ASTC/: ASTC10X8_LDR.astc  ASTC10x10_HDR.astc  ASTC10x10_LDR.astc  ASTC10x5_HDR.astc  ASTC10x5_LDR.astc  ASTC10x6_HDR.astc  ASTC10x6_LDR.astc  ASTC10x8_HDR.astc  ASTC12X10_LDR.astc  ASTC12x10_HDR.astc  ASTC12x12_HDR.astc  ASTC4X4_HDR.astc  ASTC4X4_LDR.astc  ASTC5x4_HDR.astc  ASTC5x4_LDR.astc  ASTC5x5_HDR.astc  ASTC5x5_LDR.astc  ASTC6X5_HDR.astc  ASTC6X6_LDR.astc  ASTC6x5_LDR.astc  ASTC6x6_HDR.astc  ASTC8X5_LDR.astc  ASTC8X8_LDR.astc  ASTC8x5_HDR.astc  ASTC8x6_HDR.astc  ASTC8x6_LDR.astc  ASTC8x8_HDR.astc  Readme.txt
TestImages/Cubemaps/: Cubemap_DDS_BC1.dds  Cubemap_DDS_BC1_M.dds  Cubemap_KTX2_ASTC8x8.ktx2  Cubemap_KTX2_ASTC8x8_M.ktx2  Cubemap_PVR_ASTC8x8.pvr  Cubemap_PVR_ASTC8x8_M.pvr  Readme.txt
TestImages/DDS/: A8_A_Legacy.dds  A8_A_Modern.dds  ASTC10X8_RGB_Modern.dds  ASTC10x10_RGB_Modern.dds  ASTC10x5_RGB_Modern.dds  ASTC10x6_RGB_Modern.dds  ASTC12X10_RGB_Modern.dds  ASTC12x12_RGB_Modern.dds  ASTC4X4_RGB_Modern.dds  ASTC5X5_RGB_Modern.dds  ASTC5x4_RGB_Modern.dds  ASTC6X6_RGB_Modern.dds  ASTC6x5_RGB_Modern.dds  ASTC8X5_RGB_Modern.dds  ASTC8X6_RGB_Modern.dds  ASTC8x8_RGB_Modern.dds  B4G4R4A4_RGBA_Legacy.dds  B4G4R4A4_RGBA_Modern.dds  B5G5R5A1_RGBA_Legacy.dds  B5G5R5A1_RGBA_Modern.dds  B5G6R5_RGB_Legacy.dds  B5G6R5_RGB_Modern.dds  B8G8R8_RGB_Legacy.dds  BC1DXT1A_RGBA_Legacy.dds  BC1DXT1A_RGBA_Modern.dds  BC1DXT1_AlphaBlocksWhy_Modern.dds  BC1DXT1_RGB_Legacy.dds  BC1DXT1_RGB_Modern.dds  BC1DXT1_RGB_Modern_318x178.dds  BC1DXT1_RGB_Modern_320x180.dds  BC2DXT2DXT3_RGBA_Legacy.dds  BC2DXT2DXT3_RGBA_Modern.dds  BC3DXT4DXT5_RGBA_Legacy.dds  BC3DXT4DXT5_RGBA_Modern.dds  BC4ATI1_R_Modern.dds  BC5ATI2_RG_Modern.dds  BC6S_HDRRGB_Modern.dds  BC6u_HDRRGB_Modern.dds  BC7_RGBA_Modern.dds  Dock317x177.dds  (+14 more)
TestImages/ExifOrientation/: Licence.txt
TestImages/Flipbook/: .gitignore  explosion01-light-frame001.tga  explosion01-light-frame002.tga  explosion01-light-frame003.tga  explosion01-light-frame004.tga  explosion01-light-frame005.tga  explosion01-light-frame006.tga  explosion01-light-frame007.tga  explosion01-light-frame008.tga  explosion01-light-frame009.tga  explosion01-light-frame010.tga  explosion01-light-frame011.tga  explosion01-light-frame012.tga  explosion01-light-frame013.tga  explosion01-light-frame014.tga  (+87 more)
Textures/: .gitignore  CubemapLayoutGuide.dds  SkyRight.tiff  TestDXT1BA.dds  TestDXT5.dds  WhiteBorderRLE.tga
Windows/: Readme.txt  TacentView.rc  TacitTexView.rc  TacitTexView.sln  TacitTexView.vcxproj  TacitTexView.vcxproj.filters  create_zip.ps1  create_zip.ps1.in  resource.h
docs/: _config.yml  cli.md  examples.md  gui.md  index.md  usage.md
(+1171 files in other folders)
